Fix compose button z-index

--- a/app/javascript/flavours/aether/styles/components/single_column.scss
+++ b/app/javascript/flavours/aether/styles/components/single_column.scss
@@ -250,6 +250,7 @@
     border-radius: 100%;
     width: 60px;
     box-sizing: border-box;
+    z-index: 1000;
 
     i {
       margin-left: 0 !important;
